--- a/index.html
+++ b/index.html
@@ -9,14 +9,29 @@
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 <title>RAMADAN 2023</title>
+<style>
+    #iftar-sehri h3 {
+        background-color: aquamarine;
+        width: 40%;
+    }
+
+    #gregorian-date,
+    #hijri-date {
+        width: 40%;
+        margin-top: 5px;
+    }
+</style>
 </head>
 
 <body class="container mx-auto">
-    <h3 style="color: tomato;">***Please check updated time from 12 am and before sunset for accurate date of Ramadan***
+    <h3 style="color: tomato;">***Check time from 12 am and before sunset for accurate date of Ramadan***
     </h3>
-    <button id="btn-update" class="btn btn-primary">Update</button>
-    <h1 id="gregorian-date"></h1>
-    <h1 id="hijri-date"></h1>
+    <button id="btn-update" class="btn btn-primary">About Today</button>
+    <h3 id="gregorian-date" style="background-color: lightpink;"></h3>
+    <h3 id="hijri-date" style="background-color: lightgreen;"></h3>
+    <div id="iftar-sehri">
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
