24h time formet text added

--- a/index.html
+++ b/index.html
@@ -70,104 +70,107 @@
                 distance covered by a journey of) seventy years."</p>
 
         </div>
-        <div
-            class="grid grid-cols-5 sm:grid-cols-6 md:grid-cols-6 lg:grid-cols-6 gap-2 w-100 sm:w-100 md:w-3/4 lg:w-1/2 mx-auto">
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>00:00</p>
-                <p>01:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>01:00</p>
-                <p>01:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>02:00</p>
-                <p>02:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>03:00</p>
-                <p>03:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>04:00</p>
-                <p>04:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>05:00</p>
-                <p>05:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>06:00</p>
-                <p>06:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>07:00</p>
-                <p>07:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>08:00</p>
-                <p>08:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>09:00</p>
-                <p>09:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>10:00</p>
-                <p>10:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>11:00</p>
-                <p>11:00 AM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>12:00</p>
-                <p>12:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>13:00</p>
-                <p>01:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>14:00</p>
-                <p>02:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>15:00</p>
-                <p>03:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>16:00</p>
-                <p>04:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>17:00</p>
-                <p>05:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>18:00</p>
-                <p>06:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>19:00</p>
-                <p>07:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>20:00</p>
-                <p>08:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>21:00</p>
-                <p>09:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>22:00</p>
-                <p>10:00 PM</p>
-            </div>
-            <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
-                <p>23:00</p>
-                <p>11:00 PM</p>
-            </div>
+        <div>
+            <h3 class="text-lg font-medium my-2 text-pink-400 text-center">24-Hour Time Format</h3>
+            <section
+                class="grid grid-cols-5 sm:grid-cols-6 md:grid-cols-6 lg:grid-cols-6 gap-2 w-100 sm:w-100 md:w-3/4 lg:w-1/2 mx-auto">
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>00:00</p>
+                    <p>01:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>01:00</p>
+                    <p>01:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>02:00</p>
+                    <p>02:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>03:00</p>
+                    <p>03:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>04:00</p>
+                    <p>04:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>05:00</p>
+                    <p>05:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>06:00</p>
+                    <p>06:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>07:00</p>
+                    <p>07:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>08:00</p>
+                    <p>08:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>09:00</p>
+                    <p>09:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>10:00</p>
+                    <p>10:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>11:00</p>
+                    <p>11:00 AM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>12:00</p>
+                    <p>12:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>13:00</p>
+                    <p>01:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>14:00</p>
+                    <p>02:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>15:00</p>
+                    <p>03:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>16:00</p>
+                    <p>04:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>17:00</p>
+                    <p>05:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>18:00</p>
+                    <p>06:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>19:00</p>
+                    <p>07:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>20:00</p>
+                    <p>08:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>21:00</p>
+                    <p>09:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>22:00</p>
+                    <p>10:00 PM</p>
+                </div>
+                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                    <p>23:00</p>
+                    <p>11:00 PM</p>
+                </div>
+            </section>
         </div>
 
     </section>
