--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <p>03:00</p>
                     <p>03:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-blue-200 text-center text-blue-700 font-medium rounded-lg">
                     <p>04:00</p>
                     <p>04:00 AM</p>
                 </div>
@@ -146,7 +146,7 @@
                     <p>17:00</p>
                     <p>05:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-blue-200 text-center text-blue-700 font-medium rounded-lg">
                     <p>18:00</p>
                     <p>06:00 PM</p>
                 </div>
