--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </div>
         <div class="mb-4">
             <button id="btn-update"
-                class="bg-pink-500 hover:bg-pink-600 text-white font-semibold px-2 py-1 rounded flex mx-auto my-2 items-center">About
-                Today</button>
+                class="bg-pink-500 hover:bg-pink-600 text-white font-semibold px-4 py-2 rounded flex mx-auto my-2 items-center">Today's
+                Date</button>
             <h3 id="gregorian-date" class="text-green-500 font-bold text-center"></h3>
             <h3 id="hijri-date" class="text-green-500 font-bold text-center"></h3>
             <div id="iftar-sehri"></div>
@@ -71,22 +71,22 @@
 
         </div>
         <div>
-            <h3 class="text-lg font-medium my-2 text-pink-400 text-center">24-Hour Time Format</h3>
+            <h3 class="text-lg font-medium my-2 text-blue-500 text-center">24-Hour Time Format</h3>
             <section
                 class="grid grid-cols-4 sm:grid-cols-6 md:grid-cols-6 lg:grid-cols-6 gap-2 w-100 sm:w-100 md:w-3/4 lg:w-1/2 mx-auto">
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>00:00</p>
                     <p>12:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>01:00</p>
                     <p>01:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>02:00</p>
                     <p>02:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>03:00</p>
                     <p>03:00 AM</p>
                 </div>
@@ -94,55 +94,55 @@
                     <p>04:00</p>
                     <p>04:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>05:00</p>
                     <p>05:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>06:00</p>
                     <p>06:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>07:00</p>
                     <p>07:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>08:00</p>
                     <p>08:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>09:00</p>
                     <p>09:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>10:00</p>
                     <p>10:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>11:00</p>
                     <p>11:00 AM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>12:00</p>
                     <p>12:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>13:00</p>
                     <p>01:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>14:00</p>
                     <p>02:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>15:00</p>
                     <p>03:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>16:00</p>
                     <p>04:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>17:00</p>
                     <p>05:00 PM</p>
                 </div>
@@ -150,23 +150,23 @@
                     <p>18:00</p>
                     <p>06:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>19:00</p>
                     <p>07:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>20:00</p>
                     <p>08:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>21:00</p>
                     <p>09:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>22:00</p>
                     <p>10:00 PM</p>
                 </div>
-                <div class="bg-pink-200 text-center text-pink-700 font-medium rounded-lg">
+                <div class="bg-green-200 text-center text-green-700 font-medium rounded-lg">
                     <p>23:00</p>
                     <p>11:00 PM</p>
                 </div>
