--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <section>
         <div>
             <span id="span" class="bg-slate-300 text-slate-500 px-2 py-1 rounded-2xl"></span>
-            <h3 class="text-red-400 font-medium text-center">***Please check time from 12 am and before sunset for <span
-                    class="underline">accurate date of
+            <h3 class="text-red-400 font-medium text-center">***Please check time from 00:00 (12:00 am) and before
+                sunset
+                for <span class="underline">accurate date of
                     Ramadan</span>***
             </h3>
             <p
