--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<title>RAMADAN 2023</title>
+    <script src="https://kit.fontawesome.com/6c0e978889.js" crossorigin="anonymous"></script>
+    <title>RAMADAN 2023</title>
 </head>
 
 <body class="bg-slate-100 p-4">
     <section>
         <div>
-            <span id="span" class="bg-slate-300 text-slate-500 px-2 py-1 rounded-2xl"></span>
+            <i class="fa-solid fa-mosque flex justify-center hover:cursor-pointer text-sky-200 text-xl"></i>
+            <span id="span"
+                class="flex justify-center w-1/5 mx-auto bg-slate-200 text-slate-500 px-2 py-1 rounded-2xl my-2"></span>
             <h3 class="text-red-400 font-medium text-center">***Please check time from 00:00 (12:00 am) and before
                 sunset
                 for <span class="underline">accurate date of
@@ -40,10 +42,16 @@
         </div>
         <div class="mb-4">
             <button id="btn-update"
-                class="bg-pink-500 hover:bg-pink-600 text-white font-semibold px-4 py-2 rounded flex mx-auto my-2 items-center">Today's
+                class="bg-sky-400 hover:bg-sky-500 text-white font-medium px-3 py-1.5 rounded flex mx-auto my-2 items-center">Today's
                 Date</button>
-            <h3 id="gregorian-date" class="text-green-500 font-bold text-center"></h3>
-            <h3 id="hijri-date" class="text-green-500 font-bold text-center"></h3>
+            <h2
+                class="mb-4 font-semibold text-rose-400 bg-rose-100 w-1/3 mx-auto rounded-2xl px-2 py-1 text-center mt-2">
+                **Dhaka
+                Time**</h2>
+            <div class="bg-sky-200 w-1/3 rounded-md mx-auto mb-4">
+                <h3 id="gregorian-date" class="text-green-600 font-semibold text-center"></h3>
+                <h3 id="hijri-date" class="text-green-600 font-semibold text-center"></h3>
+            </div>
             <div id="iftar-sehri"></div>
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 text-slate-600 gap-4 p-2">
