disabled warning added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
                 connection.</p>
         </div>
         <div class="mb-4">
+            <div id="btn-disabled-warning" class="text-rose-400 bg-rose-100 rounded-lg w-1/ mx-auto hidden">
+                <small style="font-size: 10px;" class="text-center flex justify-center">Button is disabled from
+                    19:00-23:00</small>
+                <small style="font-size: 10px;" class="text-center flex justify-center">Please check date before iftar
+                    time
+                    (before sunset) and/or after
+                    00:00 (12:00
+                    am)</small>
+            </div>
             <button id="btn-update"
                 class="bg-sky-400 hover:bg-sky-500 text-white font-medium px-3 py-1.5 rounded flex mx-auto my-2 items-center">Today's
                 Date</button>
