--- a/index.html
+++ b/index.html
@@ -7,22 +7,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/6c0e978889.js" crossorigin="anonymous"></script>
-    <title>RAMADAN 2023</title>
+    <title>Ramadan Date 2023</title>
 </head>
 
 <body class="bg-slate-100 p-4">
+    <i class="fa-solid fa-mosque flex justify-center hover:cursor-pointer text-sky-200 text-xl"></i>
+    <span id="span" class="flex justify-center w-1/5 mx-auto bg-slate-200 text-slate-500 px-2 py-1 rounded-2xl my-2">
+    </span>
+    <div id="contain_moon" class="py-1 text-center flex flex-col justify-center items-center">
+        <div class="font-semibold bg-green-300 px-2 py-1 rounded text-white">The moon today</div>
+        <div style="margin-top:-7px;margin-bottom:-15px;padding:30px;filter:drop-shadow(0 0 30px #002d86)">
+        </div>
+        <div class="mt-16">.</div>
+        <div style="font-size:small">.</div>
+    </div>
+    <script>
+        (
+            function () {
+                let d = new Date().getDate();
+                let m = document.querySelectorAll("#contain_moon div");
+                let a = new XMLHttpRequest();
+                let url = "https://www.icalendar37.net/lunar/api/?lang=en&month="
+                    + (new Date().getMonth() + 1)
+                    + "&year="
+                    + (new Date().getFullYear())
+                    + "&size=100&lightColor=rgb(245,245,245)&shadeColor=rgb(17,17,17)&LDZ="
+                    + new Date(new Date().getFullYear(), new Date().getMonth(), 1) / 1000
+                    + "";
+                m[1].style.height = "100px";
+                a.onreadystatechange = function () {
+                    if (a.readyState == 4 && a.status == 200) {
+                        let b = JSON.parse(a.responseText);
+                        m[1].innerHTML = b.phase[d].svg;
+                        if (typeof moon_widget_loaded == "function") moon_widget_loaded(b);
+                        m[2].innerHTML = b.phase[d].npWidget;
+                        m[3].innerHTML = "<small class='text-xs'>Next full moon</small> "
+                            + b.nextFullMoon
+                    }
+                };
+                a.open("GET", url, true);
+                a.send()
+            }
+        )()
+    </script>
     <section>
         <div>
-            <i class="fa-solid fa-mosque flex justify-center hover:cursor-pointer text-sky-200 text-xl"></i>
-            <span id="span"
-                class="flex justify-center w-1/5 mx-auto bg-slate-200 text-slate-500 px-2 py-1 rounded-2xl my-2"></span>
-            <h3 class="text-red-400 font-medium text-center">***Please check time from 00:00 (12:00 am) and before
-                sunset
-                for <span class="underline">accurate date of
-                    Ramadan</span>***
+            <h3 class="text-red-500 font-medium text-center text-xs">*** Please check time from 00:00 (12:00 am) and
+                before sunset for accurate date of Ramadan ***
             </h3>
             <p
-                class="text-slate-600 font-medium bg-slate-50 p-3 text text-justify w-100 sm:w-100 md:w-3/4 lg:w-1/2 md:mx-auto lg:mx-auto rounded-xl">
+                class="text-slate-600 font-medium bg-slate-50 p-3 text-xs text text-justify w-100 sm:w-100 md:w-3/4 lg:w-1/2 md:mx-auto lg:mx-auto rounded-xl">
                 The Sehri
                 and iftar
                 time is
@@ -37,58 +71,72 @@
                 hasting to break the fast after sunset and not to delay it. So break your fast at the provided time
                 after
                 deducting 3
-                mins <span class="text-red-400">IF YOUR TIME IS ACCURATELY UP TO DATE</span> through internet
-                connection.</p>
+                mins
+                <span class="text-red-500 text-xs">IF YOUR TIME IS ACCURATELY UP TO DATE THROUGH INTERNET
+                    CONNECTION.
+                </span>
+            </p>
         </div>
         <div class="mb-4">
             <div id="btn-disabled-warning" class="text-rose-400 bg-rose-100 rounded-lg w-1/ mx-auto hidden">
                 <small style="font-size: 10px;" class="text-center flex justify-center">Button is disabled from
-                    19:00-23:00</small>
+                    19:00-23:00
+                </small>
                 <small style="font-size: 10px;" class="text-center flex justify-center">Please check date before iftar
                     time
                     (before sunset) and/or after
                     00:00 (12:00
-                    am)</small>
+                    am)
+                </small>
             </div>
             <button id="btn-update"
                 class="bg-sky-400 hover:bg-sky-500 text-white font-medium px-3 py-1.5 rounded flex mx-auto my-2 items-center">Today's
                 Date</button>
             <h2
-                class="mb-4 font-semibold text-rose-400 bg-rose-100 w-1/2 mx-auto rounded-2xl px-2 py-1 text-center mt-2">
-                **Dhaka
-                Time**</h2>
+                class="mb-4 font-bold text-rose-400 bg-rose-100 w-1/2 mx-auto rounded-2xl px-2 py-1 text-center mt-2 text-xs">
+                ** Dhaka Time **
+            </h2>
             <div class="bg-sky-200 w-1/2 rounded-md mx-auto mb-4">
                 <h3 id="gregorian-date" class="text-green-600 font-semibold text-center"></h3>
                 <h3 id="hijri-date" class="text-green-600 font-semibold text-center"></h3>
             </div>
-            <div id="iftar-sehri"></div>
+            <div id="iftar-sehri">
+
+            </div>
         </div>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 text-slate-600 gap-4 p-2">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 text-slate-600 gap-4 p-2 text-sm">
             <p>"When Ramadan enters, the gates of Paradise are opened, the gates of
                 Hellfire
                 are
                 closed and the devils
-                are chained."</p>
+                are chained."
+            </p>
             <p>"Every action a son of Adam does shall be multiplied—a good action by ten times its value, up to 700
                 times. Allah says: With the exception of fasting, which belongs to Me, and I reward it accordingly. For,
-                one abandons his desire and food for My sake."</p>
+                one abandons his desire and food for My sake."
+            </p>
             <p>"There are two occasions of joy for a fasting person: one when he breaks his fast, and the other when he
                 meets his Lord, and the (bad) breath (of a fasting person) is better in the sight of Allah than the
-                fragrance of musk."</p>
+                fragrance of musk."
+            </p>
             <p>"Fasting is a shield; so when one of you is fasting he should neither indulge in obscene language nor
                 should he raise his voice in anger. If someone attacks him or insults him, let him say: “I am fasting!”"
             </p>
             <p>"The five (daily) prayers, and from one Friday prayer to the next, and from Ramadan to Ramadan are
-                expiation for sins committed in between provided one stays away from the major sins."</p>
+                expiation for sins committed in between provided one stays away from the major sins."
+            </p>
             <p>"Whoever observes fasts during the month of Ramadan out of sincere faith, and hoping to attain Allah's
-                rewards, then all his past sins will be forgiven."</p>
+                rewards, then all his past sins will be forgiven."
+            </p>
             <p>"Whoever stands (in the voluntary night prayer of) Ramadan out of faith and in hope of reward, his
-                previous sins will be forgiven."</p>
+                previous sins will be forgiven."
+            </p>
             <p>"Anyone who fasts for one day for Allah's sake, Allah will keep his face away from the Hellfire for (a
-                distance covered by a journey of) seventy years."</p>
+                distance covered by a journey of) seventy years."
+            </p>
 
         </div>
-        <div>
+        <div class="hidden">
             <h3 class="text-lg font-medium my-2 text-blue-500 text-center">24-Hour Time Format</h3>
             <section
                 class="grid grid-cols-4 sm:grid-cols-6 md:grid-cols-6 lg:grid-cols-6 gap-2 w-100 sm:w-100 md:w-3/4 lg:w-1/2 mx-auto">
@@ -190,8 +238,9 @@
                 </div>
             </section>
         </div>
-
     </section>
+
+
     <script src="app.js"></script>
 </body>
 
