--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
                 </small>
             </div>
             <button id="btn-update"
-                class="bg-sky-400 hover:bg-sky-500 text-white font-medium px-3 py-1.5 rounded flex mx-auto my-2 items-center">Today's
+                class="bg-sky-400 hover:bg-sky-500 text-white font-medium px-1.5 py-1 text-sm rounded flex mx-auto my-2 items-center">Today's
                 Date</button>
             <h2
                 class="mb-4 font-bold text-rose-400 bg-rose-100 w-1/2 mx-auto rounded-2xl px-2 py-1 text-center mt-2 text-xs">
                 ** Dhaka Time **
             </h2>
-            <div class="bg-sky-200 w-1/2 rounded-md mx-auto mb-4">
-                <h3 id="gregorian-date" class="text-green-600 font-semibold text-center"></h3>
-                <h3 id="hijri-date" class="text-green-600 font-semibold text-center"></h3>
+            <div class="bg-sky-100 w-1/2 rounded-md mx-auto mb-4">
+                <h3 id="gregorian-date" class="text-green-500 font-semibold text-center text-sm"></h3>
+                <h3 id="hijri-date" class="text-green-500 font-semibold text-center text-sm"></h3>
             </div>
             <div id="iftar-sehri">
 
